log
Thu 20 Apr 2023 10:09:03 PM UTC: 
 tests:  1|8
total_score: 0/70
a187b08
Thu 20 Apr 2023 10:30:21 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:23: error: invalid initializer
   41 |     TreeMap newTree = (TreeMap *) malloc(sizeof(TreeMap));
      |                       ^
treemap.c:42:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |     newTree->root = NULL;
      |            ^~
treemap.c:43:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |     newTree->current = NULL;
      |            ^~
treemap.c:44:12: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |     return newTree;
      |            ^~~~~~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
85a6fc3
Thu 20 Apr 2023 10:30:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
0fad6cf
Thu 20 Apr 2023 10:31:32 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|8
total_score: 0/70
58b7599
Thu 20 Apr 2023 10:32:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
a4562e5
Thu 20 Apr 2023 10:32:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:25: error: assignment to ‘int (*)(void *, void *)’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   44 |     newTree->lower_than = 1;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
c33b75a
Thu 20 Apr 2023 10:33:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
f329f6f
Thu 20 Apr 2023 10:35:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:27: error: ‘false’ undeclared (first use in this function)
   44 |     newTree->lower_than = false;
      |                           ^~~~~
treemap.c:5:1: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
treemap.c:44:27: note: each undeclared identifier is reported only once for each function it appears in
   44 |     newTree->lower_than = false;
      |                           ^~~~~
Compilation failed
08ba558
Thu 20 Apr 2023 10:35:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
7a02a7d
Thu 20 Apr 2023 10:39:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:27: error: ‘lt’ undeclared (first use in this function)
   44 |     newTree->lower_than = lt;
      |                           ^~
treemap.c:44:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
074686f
Thu 20 Apr 2023 10:39:19 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
883d53e
Thu 20 Apr 2023 10:39:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:27: error: ‘lt’ undeclared (first use in this function)
   44 |     newTree->lower_than = lt;
      |                           ^~
treemap.c:44:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
206f07e
Thu 20 Apr 2023 10:40:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
ab6840c
